Compilador teste/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    DATAFORMAT

Grammar

Rule 0     S' -> program
Rule 1     program -> blocks
Rule 2     blocks -> blocks block
Rule 3     blocks -> blocks label_block
Rule 4     blocks -> block
Rule 5     label_block -> label_colon label_instruction
Rule 6     label_instruction -> INDENT instructions DEDENT
Rule 7     label_colon -> LABEL COLON
Rule 8     block -> instructions
Rule 9     instructions -> instructions instruction
Rule 10    instructions -> instruction
Rule 11    instruction -> mov_registers
Rule 12    instruction -> mov_register_number
Rule 13    instruction -> mva_number
Rule 14    instruction -> lxi_register_number
Rule 15    instruction -> load_variable_address
Rule 16    instruction -> store_value
Rule 17    instruction -> arithmeticb
Rule 18    instruction -> out_format_var
Rule 19    instruction -> jump
Rule 20    instruction -> variable
Rule 21    instruction -> empty
Rule 22    mov_registers -> MOV REGISTER COMMA REGISTER
Rule 23    mov_register_number -> MOV REGISTER COMMA HEX_NUMBER_BYTE
Rule 24    mov_register_number -> MOV REGISTER COMMA VARIABLE
Rule 25    mva_number -> MVA HEX_NUMBER_BYTE
Rule 26    lxi_register_number -> LXI REGISTER COMMA HEX_NUMBER_WORD
Rule 27    load_variable_address -> LOAD OPENBRACKET VARIABLE CLOSEBRACKET
Rule 28    load_variable_address -> LOAD OPENBRACKET HEX_NUMBER_WORD CLOSEBRACKET
Rule 29    store_value -> STORE REGISTER COMMA OPENBRACKET VARIABLE CLOSEBRACKET
Rule 30    store_value -> STORE REGISTER COMMA OPENBRACKET HEX_NUMBER_WORD CLOSEBRACKET
Rule 31    arithmeticb -> ARITHMETICB REGISTER
Rule 32    out_format_var -> OUT OPENPARENTHESIS FORMAT COMMA VARIABLE CLOSEPARENTHESIS
Rule 33    out_format_var -> OUT OPENPARENTHESIS STRING CLOSEPARENTHESIS
Rule 34    out_format_var -> OUT OPENPARENTHESIS CLOSEPARENTHESIS
Rule 35    jump -> JUMP OPENBRACKET LABEL CLOSEBRACKET
Rule 36    jump -> JUMP OPENBRACKET HEX_NUMBER_WORD CLOSEBRACKET
Rule 37    variable -> VARIABLE COLON HEX_NUMBER_WORD
Rule 38    variable -> VARIABLE COLON STRING
Rule 39    empty -> <empty>

Terminals, with rules where they appear

ARITHMETICB          : 31
CLOSEBRACKET         : 27 28 29 30 35 36
CLOSEPARENTHESIS     : 32 33 34
COLON                : 7 37 38
COMMA                : 22 23 24 26 29 30 32
COMMENT              : 
DATAFORMAT           : 
DEDENT               : 6
FORMAT               : 32
HEX_NUMBER_BYTE      : 23 25
HEX_NUMBER_WORD      : 26 28 30 36 37
INDENT               : 6
JUMP                 : 35 36
LABEL                : 7 35
LOAD                 : 27 28
LXI                  : 26
MOV                  : 22 23 24
MVA                  : 25
OPENBRACKET          : 27 28 29 30 35 36
OPENPARENTHESIS      : 32 33 34
OUT                  : 32 33 34
REGISTER             : 22 22 23 24 26 29 30 31
STORE                : 29 30
STRING               : 33 38
VARIABLE             : 24 27 29 32 37 38
error                : 

Nonterminals, with rules where they appear

arithmeticb          : 17
block                : 2 4
blocks               : 1 2 3
empty                : 21
instruction          : 9 10
instructions         : 6 8 9
jump                 : 19
label_block          : 3
label_colon          : 5
label_instruction    : 5
load_variable_address : 15
lxi_register_number  : 14
mov_register_number  : 12
mov_registers        : 11
mva_number           : 13
out_format_var       : 18
program              : 0
store_value          : 16
variable             : 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . blocks
    (2) blocks -> . blocks block
    (3) blocks -> . blocks label_block
    (4) blocks -> . block
    (8) block -> . instructions
    (9) instructions -> . instructions instruction
    (10) instructions -> . instruction
    (11) instruction -> . mov_registers
    (12) instruction -> . mov_register_number
    (13) instruction -> . mva_number
    (14) instruction -> . lxi_register_number
    (15) instruction -> . load_variable_address
    (16) instruction -> . store_value
    (17) instruction -> . arithmeticb
    (18) instruction -> . out_format_var
    (19) instruction -> . jump
    (20) instruction -> . variable
    (21) instruction -> . empty
    (22) mov_registers -> . MOV REGISTER COMMA REGISTER
    (23) mov_register_number -> . MOV REGISTER COMMA HEX_NUMBER_BYTE
    (24) mov_register_number -> . MOV REGISTER COMMA VARIABLE
    (25) mva_number -> . MVA HEX_NUMBER_BYTE
    (26) lxi_register_number -> . LXI REGISTER COMMA HEX_NUMBER_WORD
    (27) load_variable_address -> . LOAD OPENBRACKET VARIABLE CLOSEBRACKET
    (28) load_variable_address -> . LOAD OPENBRACKET HEX_NUMBER_WORD CLOSEBRACKET
    (29) store_value -> . STORE REGISTER COMMA OPENBRACKET VARIABLE CLOSEBRACKET
    (30) store_value -> . STORE REGISTER COMMA OPENBRACKET HEX_NUMBER_WORD CLOSEBRACKET
    (31) arithmeticb -> . ARITHMETICB REGISTER
    (32) out_format_var -> . OUT OPENPARENTHESIS FORMAT COMMA VARIABLE CLOSEPARENTHESIS
    (33) out_format_var -> . OUT OPENPARENTHESIS STRING CLOSEPARENTHESIS
    (34) out_format_var -> . OUT OPENPARENTHESIS CLOSEPARENTHESIS
    (35) jump -> . JUMP OPENBRACKET LABEL CLOSEBRACKET
    (36) jump -> . JUMP OPENBRACKET HEX_NUMBER_WORD CLOSEBRACKET
    (37) variable -> . VARIABLE COLON HEX_NUMBER_WORD
    (38) variable -> . VARIABLE COLON STRING
    (39) empty -> .

  ! shift/reduce conflict for MOV resolved as shift
  ! shift/reduce conflict for MVA resolved as shift
  ! shift/reduce conflict for LXI resolved as shift
  ! shift/reduce conflict for LOAD resolved as shift
  ! shift/reduce conflict for STORE resolved as shift
  ! shift/reduce conflict for ARITHMETICB resolved as shift
  ! shift/reduce conflict for OUT resolved as shift
  ! shift/reduce conflict for JUMP resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
    MOV             shift and go to state 17
    MVA             shift and go to state 19
    LXI             shift and go to state 20
    LOAD            shift and go to state 21
    STORE           shift and go to state 22
    ARITHMETICB     shift and go to state 23
    OUT             shift and go to state 24
    JUMP            shift and go to state 25
    VARIABLE        shift and go to state 18
    LABEL           reduce using rule 39 (empty -> .)
    $end            reduce using rule 39 (empty -> .)

  ! MOV             [ reduce using rule 39 (empty -> .) ]
  ! MVA             [ reduce using rule 39 (empty -> .) ]
  ! LXI             [ reduce using rule 39 (empty -> .) ]
  ! LOAD            [ reduce using rule 39 (empty -> .) ]
  ! STORE           [ reduce using rule 39 (empty -> .) ]
  ! ARITHMETICB     [ reduce using rule 39 (empty -> .) ]
  ! OUT             [ reduce using rule 39 (empty -> .) ]
  ! JUMP            [ reduce using rule 39 (empty -> .) ]
  ! VARIABLE        [ reduce using rule 39 (empty -> .) ]

    program                        shift and go to state 1
    blocks                         shift and go to state 2
    block                          shift and go to state 3
    instructions                   shift and go to state 4
    instruction                    shift and go to state 5
    mov_registers                  shift and go to state 6
    mov_register_number            shift and go to state 7
    mva_number                     shift and go to state 8
    lxi_register_number            shift and go to state 9
    load_variable_address          shift and go to state 10
    store_value                    shift and go to state 11
    arithmeticb                    shift and go to state 12
    out_format_var                 shift and go to state 13
    jump                           shift and go to state 14
    variable                       shift and go to state 15
    empty                          shift and go to state 16

state 1

    (0) S' -> program .



state 2

    (1) program -> blocks .
    (2) blocks -> blocks . block
    (3) blocks -> blocks . label_block
    (8) block -> . instructions
    (5) label_block -> . label_colon label_instruction
    (9) instructions -> . instructions instruction
    (10) instructions -> . instruction
    (7) label_colon -> . LABEL COLON
    (11) instruction -> . mov_registers
    (12) instruction -> . mov_register_number
    (13) instruction -> . mva_number
    (14) instruction -> . lxi_register_number
    (15) instruction -> . load_variable_address
    (16) instruction -> . store_value
    (17) instruction -> . arithmeticb
    (18) instruction -> . out_format_var
    (19) instruction -> . jump
    (20) instruction -> . variable
    (21) instruction -> . empty
    (22) mov_registers -> . MOV REGISTER COMMA REGISTER
    (23) mov_register_number -> . MOV REGISTER COMMA HEX_NUMBER_BYTE
    (24) mov_register_number -> . MOV REGISTER COMMA VARIABLE
    (25) mva_number -> . MVA HEX_NUMBER_BYTE
    (26) lxi_register_number -> . LXI REGISTER COMMA HEX_NUMBER_WORD
    (27) load_variable_address -> . LOAD OPENBRACKET VARIABLE CLOSEBRACKET
    (28) load_variable_address -> . LOAD OPENBRACKET HEX_NUMBER_WORD CLOSEBRACKET
    (29) store_value -> . STORE REGISTER COMMA OPENBRACKET VARIABLE CLOSEBRACKET
    (30) store_value -> . STORE REGISTER COMMA OPENBRACKET HEX_NUMBER_WORD CLOSEBRACKET
    (31) arithmeticb -> . ARITHMETICB REGISTER
    (32) out_format_var -> . OUT OPENPARENTHESIS FORMAT COMMA VARIABLE CLOSEPARENTHESIS
    (33) out_format_var -> . OUT OPENPARENTHESIS STRING CLOSEPARENTHESIS
    (34) out_format_var -> . OUT OPENPARENTHESIS CLOSEPARENTHESIS
    (35) jump -> . JUMP OPENBRACKET LABEL CLOSEBRACKET
    (36) jump -> . JUMP OPENBRACKET HEX_NUMBER_WORD CLOSEBRACKET
    (37) variable -> . VARIABLE COLON HEX_NUMBER_WORD
    (38) variable -> . VARIABLE COLON STRING
    (39) empty -> .

  ! shift/reduce conflict for MOV resolved as shift
  ! shift/reduce conflict for MVA resolved as shift
  ! shift/reduce conflict for LXI resolved as shift
  ! shift/reduce conflict for LOAD resolved as shift
  ! shift/reduce conflict for STORE resolved as shift
  ! shift/reduce conflict for ARITHMETICB resolved as shift
  ! shift/reduce conflict for OUT resolved as shift
  ! shift/reduce conflict for JUMP resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for LABEL resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 1 (program -> blocks .)
    $end            reduce using rule 1 (program -> blocks .)
    LABEL           shift and go to state 29
    MOV             shift and go to state 17
    MVA             shift and go to state 19
    LXI             shift and go to state 20
    LOAD            shift and go to state 21
    STORE           shift and go to state 22
    ARITHMETICB     shift and go to state 23
    OUT             shift and go to state 24
    JUMP            shift and go to state 25
    VARIABLE        shift and go to state 18

  ! MOV             [ reduce using rule 39 (empty -> .) ]
  ! MVA             [ reduce using rule 39 (empty -> .) ]
  ! LXI             [ reduce using rule 39 (empty -> .) ]
  ! LOAD            [ reduce using rule 39 (empty -> .) ]
  ! STORE           [ reduce using rule 39 (empty -> .) ]
  ! ARITHMETICB     [ reduce using rule 39 (empty -> .) ]
  ! OUT             [ reduce using rule 39 (empty -> .) ]
  ! JUMP            [ reduce using rule 39 (empty -> .) ]
  ! VARIABLE        [ reduce using rule 39 (empty -> .) ]
  ! LABEL           [ reduce using rule 39 (empty -> .) ]
  ! $end            [ reduce using rule 39 (empty -> .) ]

    block                          shift and go to state 26
    label_block                    shift and go to state 27
    instructions                   shift and go to state 4
    label_colon                    shift and go to state 28
    instruction                    shift and go to state 5
    mov_registers                  shift and go to state 6
    mov_register_number            shift and go to state 7
    mva_number                     shift and go to state 8
    lxi_register_number            shift and go to state 9
    load_variable_address          shift and go to state 10
    store_value                    shift and go to state 11
    arithmeticb                    shift and go to state 12
    out_format_var                 shift and go to state 13
    jump                           shift and go to state 14
    variable                       shift and go to state 15
    empty                          shift and go to state 16

state 3

    (4) blocks -> block .

    LABEL           reduce using rule 4 (blocks -> block .)
    MOV             reduce using rule 4 (blocks -> block .)
    MVA             reduce using rule 4 (blocks -> block .)
    LXI             reduce using rule 4 (blocks -> block .)
    LOAD            reduce using rule 4 (blocks -> block .)
    STORE           reduce using rule 4 (blocks -> block .)
    ARITHMETICB     reduce using rule 4 (blocks -> block .)
    OUT             reduce using rule 4 (blocks -> block .)
    JUMP            reduce using rule 4 (blocks -> block .)
    VARIABLE        reduce using rule 4 (blocks -> block .)
    $end            reduce using rule 4 (blocks -> block .)


state 4

    (8) block -> instructions .
    (9) instructions -> instructions . instruction
    (11) instruction -> . mov_registers
    (12) instruction -> . mov_register_number
    (13) instruction -> . mva_number
    (14) instruction -> . lxi_register_number
    (15) instruction -> . load_variable_address
    (16) instruction -> . store_value
    (17) instruction -> . arithmeticb
    (18) instruction -> . out_format_var
    (19) instruction -> . jump
    (20) instruction -> . variable
    (21) instruction -> . empty
    (22) mov_registers -> . MOV REGISTER COMMA REGISTER
    (23) mov_register_number -> . MOV REGISTER COMMA HEX_NUMBER_BYTE
    (24) mov_register_number -> . MOV REGISTER COMMA VARIABLE
    (25) mva_number -> . MVA HEX_NUMBER_BYTE
    (26) lxi_register_number -> . LXI REGISTER COMMA HEX_NUMBER_WORD
    (27) load_variable_address -> . LOAD OPENBRACKET VARIABLE CLOSEBRACKET
    (28) load_variable_address -> . LOAD OPENBRACKET HEX_NUMBER_WORD CLOSEBRACKET
    (29) store_value -> . STORE REGISTER COMMA OPENBRACKET VARIABLE CLOSEBRACKET
    (30) store_value -> . STORE REGISTER COMMA OPENBRACKET HEX_NUMBER_WORD CLOSEBRACKET
    (31) arithmeticb -> . ARITHMETICB REGISTER
    (32) out_format_var -> . OUT OPENPARENTHESIS FORMAT COMMA VARIABLE CLOSEPARENTHESIS
    (33) out_format_var -> . OUT OPENPARENTHESIS STRING CLOSEPARENTHESIS
    (34) out_format_var -> . OUT OPENPARENTHESIS CLOSEPARENTHESIS
    (35) jump -> . JUMP OPENBRACKET LABEL CLOSEBRACKET
    (36) jump -> . JUMP OPENBRACKET HEX_NUMBER_WORD CLOSEBRACKET
    (37) variable -> . VARIABLE COLON HEX_NUMBER_WORD
    (38) variable -> . VARIABLE COLON STRING
    (39) empty -> .

  ! shift/reduce conflict for MOV resolved as shift
  ! shift/reduce conflict for MVA resolved as shift
  ! shift/reduce conflict for LXI resolved as shift
  ! shift/reduce conflict for LOAD resolved as shift
  ! shift/reduce conflict for STORE resolved as shift
  ! shift/reduce conflict for ARITHMETICB resolved as shift
  ! shift/reduce conflict for OUT resolved as shift
  ! shift/reduce conflict for JUMP resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for MOV resolved as shift
  ! shift/reduce conflict for MVA resolved as shift
  ! shift/reduce conflict for LXI resolved as shift
  ! shift/reduce conflict for LOAD resolved as shift
  ! shift/reduce conflict for STORE resolved as shift
  ! shift/reduce conflict for ARITHMETICB resolved as shift
  ! shift/reduce conflict for OUT resolved as shift
  ! shift/reduce conflict for JUMP resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
  ! reduce/reduce conflict for LABEL resolved using rule 8 (block -> instructions .)
  ! reduce/reduce conflict for $end resolved using rule 8 (block -> instructions .)
    LABEL           reduce using rule 8 (block -> instructions .)
    $end            reduce using rule 8 (block -> instructions .)
    MOV             shift and go to state 17
    MVA             shift and go to state 19
    LXI             shift and go to state 20
    LOAD            shift and go to state 21
    STORE           shift and go to state 22
    ARITHMETICB     shift and go to state 23
    OUT             shift and go to state 24
    JUMP            shift and go to state 25
    VARIABLE        shift and go to state 18

  ! MOV             [ reduce using rule 8 (block -> instructions .) ]
  ! MVA             [ reduce using rule 8 (block -> instructions .) ]
  ! LXI             [ reduce using rule 8 (block -> instructions .) ]
  ! LOAD            [ reduce using rule 8 (block -> instructions .) ]
  ! STORE           [ reduce using rule 8 (block -> instructions .) ]
  ! ARITHMETICB     [ reduce using rule 8 (block -> instructions .) ]
  ! OUT             [ reduce using rule 8 (block -> instructions .) ]
  ! JUMP            [ reduce using rule 8 (block -> instructions .) ]
  ! VARIABLE        [ reduce using rule 8 (block -> instructions .) ]
  ! MOV             [ reduce using rule 39 (empty -> .) ]
  ! MVA             [ reduce using rule 39 (empty -> .) ]
  ! LXI             [ reduce using rule 39 (empty -> .) ]
  ! LOAD            [ reduce using rule 39 (empty -> .) ]
  ! STORE           [ reduce using rule 39 (empty -> .) ]
  ! ARITHMETICB     [ reduce using rule 39 (empty -> .) ]
  ! OUT             [ reduce using rule 39 (empty -> .) ]
  ! JUMP            [ reduce using rule 39 (empty -> .) ]
  ! VARIABLE        [ reduce using rule 39 (empty -> .) ]
  ! LABEL           [ reduce using rule 39 (empty -> .) ]
  ! $end            [ reduce using rule 39 (empty -> .) ]

    instruction                    shift and go to state 30
    mov_registers                  shift and go to state 6
    mov_register_number            shift and go to state 7
    mva_number                     shift and go to state 8
    lxi_register_number            shift and go to state 9
    load_variable_address          shift and go to state 10
    store_value                    shift and go to state 11
    arithmeticb                    shift and go to state 12
    out_format_var                 shift and go to state 13
    jump                           shift and go to state 14
    variable                       shift and go to state 15
    empty                          shift and go to state 16

state 5

    (10) instructions -> instruction .

    MOV             reduce using rule 10 (instructions -> instruction .)
    MVA             reduce using rule 10 (instructions -> instruction .)
    LXI             reduce using rule 10 (instructions -> instruction .)
    LOAD            reduce using rule 10 (instructions -> instruction .)
    STORE           reduce using rule 10 (instructions -> instruction .)
    ARITHMETICB     reduce using rule 10 (instructions -> instruction .)
    OUT             reduce using rule 10 (instructions -> instruction .)
    JUMP            reduce using rule 10 (instructions -> instruction .)
    VARIABLE        reduce using rule 10 (instructions -> instruction .)
    LABEL           reduce using rule 10 (instructions -> instruction .)
    $end            reduce using rule 10 (instructions -> instruction .)
    DEDENT          reduce using rule 10 (instructions -> instruction .)


state 6

    (11) instruction -> mov_registers .

    MOV             reduce using rule 11 (instruction -> mov_registers .)
    MVA             reduce using rule 11 (instruction -> mov_registers .)
    LXI             reduce using rule 11 (instruction -> mov_registers .)
    LOAD            reduce using rule 11 (instruction -> mov_registers .)
    STORE           reduce using rule 11 (instruction -> mov_registers .)
    ARITHMETICB     reduce using rule 11 (instruction -> mov_registers .)
    OUT             reduce using rule 11 (instruction -> mov_registers .)
    JUMP            reduce using rule 11 (instruction -> mov_registers .)
    VARIABLE        reduce using rule 11 (instruction -> mov_registers .)
    LABEL           reduce using rule 11 (instruction -> mov_registers .)
    $end            reduce using rule 11 (instruction -> mov_registers .)
    DEDENT          reduce using rule 11 (instruction -> mov_registers .)


state 7

    (12) instruction -> mov_register_number .

    MOV             reduce using rule 12 (instruction -> mov_register_number .)
    MVA             reduce using rule 12 (instruction -> mov_register_number .)
    LXI             reduce using rule 12 (instruction -> mov_register_number .)
    LOAD            reduce using rule 12 (instruction -> mov_register_number .)
    STORE           reduce using rule 12 (instruction -> mov_register_number .)
    ARITHMETICB     reduce using rule 12 (instruction -> mov_register_number .)
    OUT             reduce using rule 12 (instruction -> mov_register_number .)
    JUMP            reduce using rule 12 (instruction -> mov_register_number .)
    VARIABLE        reduce using rule 12 (instruction -> mov_register_number .)
    LABEL           reduce using rule 12 (instruction -> mov_register_number .)
    $end            reduce using rule 12 (instruction -> mov_register_number .)
    DEDENT          reduce using rule 12 (instruction -> mov_register_number .)


state 8

    (13) instruction -> mva_number .

    MOV             reduce using rule 13 (instruction -> mva_number .)
    MVA             reduce using rule 13 (instruction -> mva_number .)
    LXI             reduce using rule 13 (instruction -> mva_number .)
    LOAD            reduce using rule 13 (instruction -> mva_number .)
    STORE           reduce using rule 13 (instruction -> mva_number .)
    ARITHMETICB     reduce using rule 13 (instruction -> mva_number .)
    OUT             reduce using rule 13 (instruction -> mva_number .)
    JUMP            reduce using rule 13 (instruction -> mva_number .)
    VARIABLE        reduce using rule 13 (instruction -> mva_number .)
    LABEL           reduce using rule 13 (instruction -> mva_number .)
    $end            reduce using rule 13 (instruction -> mva_number .)
    DEDENT          reduce using rule 13 (instruction -> mva_number .)


state 9

    (14) instruction -> lxi_register_number .

    MOV             reduce using rule 14 (instruction -> lxi_register_number .)
    MVA             reduce using rule 14 (instruction -> lxi_register_number .)
    LXI             reduce using rule 14 (instruction -> lxi_register_number .)
    LOAD            reduce using rule 14 (instruction -> lxi_register_number .)
    STORE           reduce using rule 14 (instruction -> lxi_register_number .)
    ARITHMETICB     reduce using rule 14 (instruction -> lxi_register_number .)
    OUT             reduce using rule 14 (instruction -> lxi_register_number .)
    JUMP            reduce using rule 14 (instruction -> lxi_register_number .)
    VARIABLE        reduce using rule 14 (instruction -> lxi_register_number .)
    LABEL           reduce using rule 14 (instruction -> lxi_register_number .)
    $end            reduce using rule 14 (instruction -> lxi_register_number .)
    DEDENT          reduce using rule 14 (instruction -> lxi_register_number .)


state 10

    (15) instruction -> load_variable_address .

    MOV             reduce using rule 15 (instruction -> load_variable_address .)
    MVA             reduce using rule 15 (instruction -> load_variable_address .)
    LXI             reduce using rule 15 (instruction -> load_variable_address .)
    LOAD            reduce using rule 15 (instruction -> load_variable_address .)
    STORE           reduce using rule 15 (instruction -> load_variable_address .)
    ARITHMETICB     reduce using rule 15 (instruction -> load_variable_address .)
    OUT             reduce using rule 15 (instruction -> load_variable_address .)
    JUMP            reduce using rule 15 (instruction -> load_variable_address .)
    VARIABLE        reduce using rule 15 (instruction -> load_variable_address .)
    LABEL           reduce using rule 15 (instruction -> load_variable_address .)
    $end            reduce using rule 15 (instruction -> load_variable_address .)
    DEDENT          reduce using rule 15 (instruction -> load_variable_address .)


state 11

    (16) instruction -> store_value .

    MOV             reduce using rule 16 (instruction -> store_value .)
    MVA             reduce using rule 16 (instruction -> store_value .)
    LXI             reduce using rule 16 (instruction -> store_value .)
    LOAD            reduce using rule 16 (instruction -> store_value .)
    STORE           reduce using rule 16 (instruction -> store_value .)
    ARITHMETICB     reduce using rule 16 (instruction -> store_value .)
    OUT             reduce using rule 16 (instruction -> store_value .)
    JUMP            reduce using rule 16 (instruction -> store_value .)
    VARIABLE        reduce using rule 16 (instruction -> store_value .)
    LABEL           reduce using rule 16 (instruction -> store_value .)
    $end            reduce using rule 16 (instruction -> store_value .)
    DEDENT          reduce using rule 16 (instruction -> store_value .)


state 12

    (17) instruction -> arithmeticb .
